ensured form looks nice on mobile/desktop and added inputs

--- a/css/layout.css
+++ b/css/layout.css
@@ -16,11 +16,17 @@
 .column-full,
 .column-half {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
+  }
+
+  .header {
+    margin: auto;
   }
 
   .column-full,
